# qt-opencv-demos

./: .gitignore  CMakeLists.txt  README.md
fun1/: CMakeLists.txt  MySink.cpp  MySink.h  fun1.cpp
fun2/: CMakeLists.txt  MainWindow2.cpp  MainWindow2.h  fun2.cpp
fun3/: CMakeLists.txt  DwarfPlayer.cpp  DwarfPlayer.h  MainWindow3.cpp  MainWindow3.h  fun3.cpp
